--- a/cluster-ec2-private-vpc.yml
+++ b/cluster-ec2-private-vpc.yml
@@ -13,9 +13,8 @@ Parameters:
     Default: c5.xlarge
     Description: Class of EC2 instance used to host containers. Choose t2 for testing, m5 for general purpose, c5 for CPU intensive services, and r5 for memory intensive services
     AllowedValues: [ t2.micro, t2.small, t2.medium, t2.large, t2.xlarge, t2.2xlarge,
-     m5.large, m5.xlarge, m5.2large, m5.4xlarge, m5.12xlarge, m5.24large,
-     c5.large, c5.xlarge, c5.2xlarge, c5.4xlarge, c5.9xlarge, c5.18xlarge,
-     r5.large, r5.xlarge, r5.2xlarge, r5.4xlarge, r5.12xlarge, r5.24xlarge ]
+     m5.large, m5.xlarge, m5.2large, m5.4xlarge, c5.large, c5.xlarge, c5.2xlarge, 
+     c5.4xlarge, r5.large, r5.xlarge, r5.2xlarge, r5.4xlarge ]
     ConstraintDescription: Please choose a valid instance type.
   OnDemandBaseCapacity:
     Type: Number
@@ -32,7 +31,7 @@ Parameters:
   InstanceTypesOverride:
     Type: String
     Description: "multiple spot instances to override(seperated by comma)"
-    Default: "m4.large,c4.large,c5.large"
+    Default: "m4.xlarge,c4.xlarge,c5.xlarge"
   DesiredCapacity:
     Type: Number
     Default: '3'
