Adding Spot instance Env var as per https://docs.aws.amazon.com/AmazonECS/latest/developerguide/container-instance-spot.html

--- a/cluster-ec2-private-vpc.yml
+++ b/cluster-ec2-private-vpc.yml
@@ -352,6 +352,7 @@ Resources:
           Fn::Base64: !Sub |
             #!/bin/bash -xe
             echo ECS_CLUSTER=${ECSCluster} >> /etc/ecs/ecs.config
+            ECS_ENABLE_SPOT_INSTANCE_DRAINING=true
             yum install -y aws-cfn-bootstrap
             /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource ECSAutoScalingGroup --region ${AWS::Region} 
   EC2InstanceProfile:
